<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/LightBlue">

    <TextView
        android:id="@+id/appLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_label"
        android:layout_margin="5dp"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authorText"
        android:text="@string/author_text"
        android:layout_margin="5dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_height="150dp"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pralka"
            android:id="@+id/washingMachineImg"
            android:contentDescription="@string/washing_machine_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/washingMachineLabel"
                android:text="@string/washing_machine_text"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/laundryNumberInput"
                android:hint="@string/laundry_hint"
                android:inputType="number"
                android:background="@color/SkyBlue"
                android:textColorHint="@color/Navy"
                android:textColor="@color/Navy"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmButton"
                android:text="@string/confirm_button_text"
                android:backgroundTint="@color/RoyalBlue"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/laundryNumberLabel"
                android:text="@string/laundry_number_text" />
            
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:src="@drawable/odkurzacz"
            android:id="@+id/vacuumImg"
            android:contentDescription="@string/vacuum_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vacuumLabel"
                android:text="@string/vacuum_text"
                android:textSize="20sp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/startButton"
                android:text="@string/start_button_text"
                android:backgroundTint="@color/RoyalBlue"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vacuumStateLabel"
                android:text="@string/vacuum_state" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vacuumStatusLabel"
                android:text="@string/vacuum_status" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>